--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Game Template</title>
-  </head>
+    <title>並べ替えゲーム</title>
+	<link rel="stylesheet" href="./main.css">
+</head>
   <body>
 
 	<script src="p5.min.js"></script>
-	<script src="p5.touchgui.js"></script>
 	<script src="sketch.js"></script>
   </body>
 </html>
